--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon index.js",
     "start": "node index.js",
     "test": "\"echo \\\"Error: no test specified\\\" && exit 1\"",
+    "lint": "eslint .",
     "build:ui": "rm -rf build && cd ../fs22/osa2/puhelinluettelo/ && npm run build && cp -r build ../../../puhelinluettelo_backend",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
@@ -23,6 +24,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.31.0",
     "nodemon": "^2.0.19"
   }
 }
